# consolized-game-boy_HDMI_AI

./: .gitignore  README.md
.github/workflows/: build-hdmi.yml
docs/: hdmi_direct_eval_2026-04-03.md  hdmi_pinout_pi_pico.md
releases/gb_hdmi_v1.0.0/: README_RELEASE.md
src/gb_hdmi/: CMakeLists.txt  gb_hdmi.c
src/gb_vga/: CMakeLists.txt  colors.c
